--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -194,12 +194,12 @@
 
 \maketitle
 \tableofcontents
-\begin{comment}
-\newpage
-\section{Aclaraciones}
-\input{aclaraciones.tex}
 
 \newpage
-\end{comment}
+\section{Parte I: Entendiendo el simulador \textit{simusched}}
+\input{parte1.tex}
 
+\newpage
+\section{Parte II: Extendiendo el simulador con nuevos schedulers}
+\input{parte2.tex}
 \end{document}
