--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -202,4 +202,8 @@
 \newpage
 \section{Parte II: Extendiendo el simulador con nuevos schedulers}
 \input{parte2.tex}
+
+\newpage
+\section{Parte III: Evaluando los algoritmos de scheduling}
+\input{parte3.tex}
 \end{document}
