un poquito ej 7

--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -206,4 +206,8 @@
 \newpage
 \section{Parte III: Evaluando los algoritmos de scheduling}
 \input{parte3.tex}
+
+\newpage
+\section{Referencias}
+\input{referencias.tex}
 \end{document}
