--- a/latex/parte3.tex
+++ b/latex/parte3.tex
@@ -10,6 +10,23 @@ Para más detalles, consultar la implementación en \textit{tasks.cpp}.
 
 \subsection{Ejercicio 7}
 
+En este ejercicio debemos elegir 2 métricas diferentes y testear un lote de tareas \textbf{TaskBatch}, todas ellas con igual uso de CPU pero con diversas
+cantidades de bloqueos. El lote de tareas utilizado es el \textit{lote3.tsk}.
+
+Las métricas que elegimos fueron:
+\begin{itemize}
+ \item Turnaround
+ \item Waiting Time 
+\end{itemize}
+
+Definidas en [Sil1] como:
+\newline
+
+Turnaround: 
+
+Waiting Time:
+
+
 \subsection{Ejercicio 8}
 
 \subsection{Ejercicio 9}
