--- a/latex/parte2.tex
+++ b/latex/parte2.tex
@@ -13,4 +13,4 @@ Para más detalles, consultar la implementación en el archivo \textit{sched\_rr.c
 
 \subsection{Ejercicio 4}
 
-\subsection{Ejercicio 5}
+\input{ej5.tex}
