Comienzo el ejercicio 4

--- a/latex/parte2.tex
+++ b/latex/parte2.tex
@@ -12,5 +12,7 @@ Si el motivo es \textbf{EXIT}, sencillamente se devuelve la proxima tarea en la 
 Para más detalles, consultar la implementación en el archivo \textit{sched\_rr.cpp}.
 
 \subsection{Ejercicio 4}
+En esta parte nos vamos a focalizar en la utilización de la política de scheduling implementada anteriormente para mostrar cómo se comporta el mismo con diversos lotes de tareas, quantums y cantidad de cores. La intención es mostrar cuan eficiente o ineficiente puede ser una misma política tan solo con variar el quantum y mostrar que la elección del mismo es muy importante.
+
 
 \input{ej5.tex}
