--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -178,8 +178,8 @@
 \pagestyle{fancy}
 \thispagestyle{fancy}
 \addtolength{\headheight}{1pt}
-\lhead{Algoritmos y Estructuras de Datos III}
-\rhead{$1^{\mathrm{er}}$ cuatrimestre de 2014}
+\lhead{Sistemas Operativos}
+\rhead{$2^{\mathrm{er}}$ cuatrimestre de 2014}
 \cfoot{\thepage /\pageref{LastPage}}
 \renewcommand{\footrulewidth}{0.4pt}
 
@@ -190,7 +190,7 @@
 \grupo{}
 \integrante{Straminsky, Axel}{769/11}{axelstraminsky@gmail.com}
 \integrante{Chapresto, Matias}{}{matiaschapresto@gmail.com}
-\integrante{Torres, Sebastian}{}{sebatorres1987@outlook.com}
+\integrante{Torres, Sebastian}{}{cs.torres@outlook.com}
 \begin{document}
 
 \maketitle
