--- a/latex/referencias.tex
+++ b/latex/referencias.tex
@@ -1,1 +1,4 @@
-[Sil1] A. Silberschatz, \textit{Operating System Concepts, 4º Ed., 1994}
+[Sil1] A. Silberschatz, \textit{Operating System Concepts, 4º Ed., 1994, págs 135-136}.
+\newline
+
+[WikSD] http://en.wikipedia.org/wiki/Standard\_deviation\#Basic\_examples
