--- a/latex/parte3.tex
+++ b/latex/parte3.tex
@@ -4,7 +4,9 @@ En esta sección se evaluan las polí­ticas de scheduling implementadas, utilizand
 \subsection{Ejercicio 6}
 El objetivo de este ejercicio es programar un tipo de tarea \textbf{TaskBatch}, que durante \textit{total\_cpu} ciclos, realize \textit{cant\_bloqueos} llamadas bloqueantes, 
 en momentos elegidos pseudoaleatoriamente. La implementación es bastante directa, con la semilla del generador de números pseudoaleatorios inicializada con la fecha del sistema
-al momento de ejecutar la función. Las llamadas bloqueantes se lanzan si \textit{rand()} devuelve un número impar. 
+al momento de ejecutar la función. Las llamadas bloqueantes se lanzan si \textit{rand()} devuelve un número impar. Para asegurarnos de que se ejecuten 
+las \textit{cant\_bloqueos} llamadas bloqueantes antes de que se terminen los \textit{total\_cpu} ciclos, creamos procesos cuya cantidad de llamadas bloqueantes fuese
+menor o igual a la mitad de los ciclos totales de CPU.
 
 Para más detalles, consultar la implementación en \textit{tasks.cpp}.
 
@@ -22,9 +24,74 @@ Las métricas que elegimos fueron:
 Definidas en [Sil1] como:
 \newline
 
-Turnaround: 
+\textbf{Turnaround}: Es el intervalo de tiempo entre el momento en que el proceso comienza a ejecutarse por primera vez, hasta el momento en que
+el mismo termina. Es decir, es la suma de los períodos usados en esperar datos de memoria, en estar encolado en la ``ready queue'', ejecutandose en 
+la CPU, y haciendo E/S.
 
-Waiting Time:
+
+\textbf{Waiting Time}: Es el tiempo que un proceso se pasa encolado en la ``ready queue''.
+\newline
+\newline
+Elegimos estas métricas ya que, con el Turnaround, tenemos una visión global de cómo se comportan los procesos, mientras que con el Waiting Time
+podemos observar cómo un hecho más puntual, el tiempo que los procesos pasan encolados, impacta en el tiempo de ejecución total del proceso.
+\newline
+\newline
+Para calcular el desvío standard utilizamos la fórmula de [WikSD]
+\newline
+\newline
+A continuación se pueden observar los resultados de la experimentación:
+\newline
+\includegraphics[width=1\textwidth]{./Graficos/ej7_1core_q2.png}
+\begin{center}
+ \textit{1 core, quantum = 2}.
+\end{center}
+~\\
+\newline
+Turnaround:  \hspace{7cm}  Waiting Time:
+
+$P_{0}$: 59  \hspace{8cm}    $P_{0}$: 42
+
+$P_{1}$: 81  \hspace{8cm}    $P_{1}$: 67
+
+$P_{2}$: 67  \hspace{8cm}    $P_{2}$: 55
+
+$P_{3}$: 86  \hspace{8cm}    $P_{3}$: 75
+
+
+Promedio: 73,25 \hspace{6,5cm}   Promedio: 59,75
+
+
+DS: 10,78           \hspace{7,4cm}    DS: 12,47
+%----------------------------------------------------------------------------------------------
+
+~\\
+\newline
+\includegraphics[width=1\textwidth]{./Graficos/ej7_1core_q3.png}
+\begin{center}
+ \textit{1 core, quantum = 3}.
+\end{center}
+~\\
+\newline
+Turnaround:  \hspace{7cm}  Waiting Time:
+
+$P_{0}$:   \hspace{8cm}    $P_{0}$: 
+
+$P_{1}$:   \hspace{8cm}    $P_{1}$: 
+
+$P_{2}$:   \hspace{8cm}    $P_{2}$: 
+
+$P_{3}$:   \hspace{8cm}    $P_{3}$: 
+
+
+Promedio:    \hspace{6,6cm}    Promedio: 
+
+
+DS:          \hspace{7,4cm}    DS: 
+~\\
+\newline
+
+
+
 
 
 \subsection{Ejercicio 8}
