Ej 4 actualizado con mas graficos. Estoy revisando posible bug del RR

--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -190,7 +190,7 @@
 \grupo{}
 \integrante{Straminsky, Axel}{769/11}{axelstraminsky@gmail.com}
 \integrante{Chapresto, Matias}{}{matiaschapresto@gmail.com}
-\integrante{Torres, Sebastian}{}{sebatorres1987@outlook.com}
+\integrante{Torres, Sebastian}{}{sebatorres1987@hotmail.com}
 \begin{document}
 
 \maketitle
