Corrije error en scheduler de Round Robin y actualiza los graficos

--- a/latex/parte2.tex
+++ b/latex/parte2.tex
@@ -49,10 +49,10 @@ Como se puede apreciar, un esquema de RR con un quantum alto tiende a comportars
 a que el quantum puede ser muy grande pero es finito.
 
 Por otro lado, un quantum muy pequeño tampoco es bueno. Esto se debe a que, si asumimos un costo de cambio de contexto mayor a 0, se va a desperdiciar mucho tiempo en cambiar de contexto
-y eso entorpecería el rendimiento general de las aplicaciones.
+y eso entorpecería el rendimiento general del sistema.
 
 
-\includegraphics[width=1\textwidth]{./Graficos/ej4_3.png}
+\includegraphics[width=1\textwidth]{./Graficos/ej4_4.png}
 \begin{center}
  \textit{Cores = 1, Quantum = 2, CS = 1}.
 \end{center}
