--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -179,7 +179,7 @@
 \thispagestyle{fancy}
 \addtolength{\headheight}{1pt}
 \lhead{Sistemas Operativos}
-\rhead{$2^{\mathrm{er}}$ cuatrimestre de 2014}
+\rhead{$2^{\mathrm{do}}$ cuatrimestre de 2014}
 \cfoot{\thepage /\pageref{LastPage}}
 \renewcommand{\footrulewidth}{0.4pt}
 
@@ -190,7 +190,7 @@
 \grupo{}
 \integrante{Straminsky, Axel}{769/11}{axelstraminsky@gmail.com}
 \integrante{Chapresto, Matias}{}{matiaschapresto@gmail.com}
-\integrante{Torres, Sebastian}{}{sebatorres1987@hotmail.com}
+\integrante{Torres, Sebastian}{723/06}{sebatorres1987@hotmail.com}
 \begin{document}
 
 \maketitle
