--- a/latex/parte2.tex
+++ b/latex/parte2.tex
@@ -3,13 +3,14 @@ En esta sección se extiende el simulador con un nuevo algoritmo de scheduling, \
 diversos lotes de tareas.
 
 \subsection{Ejercicio 3}
-El objetivo de este ejercicio es implementar la polÃ­tica de scheduling \textit{Round Robin}. La función más importante es \texttt{tick(cpu, motivo)}, cuya implementación se 
-describe a continuación: si el motivo es \textbf{TICK} o \textbf{BLOCK}, se aumenta el contador de ticks del core correspondiente. Si este contador supera el quantum del core, se 
+El objetivo de este ejercicio es implementar la polí­tica de scheduling \textit{Round Robin}. La función más importante es \texttt{tick(cpu, motivo)}, cuya implementación se 
+describe a continuación: si el motivo es \textbf{TICK}, se aumenta el contador de ticks del core correspondiente. Si este contador supera el quantum del core, se 
 vuelve a poner el contador en $0$, se encola la tarea actual y comienza a ejecutarse la siguiente tarea en la cola; caso contrario, se sigue ejecutando la tarea actual.
 
-Si el motivo es \textbf{EXIT}, sencillamente se devuelve la proxima tarea en la cola, sin encolar nuevamente la tarea actual. En caso de no haber mÃ¡s tareas, se ejecuta \textbf{IDLE\_TASK}.
+Si el motivo es \textbf{BLOCK} o \textbf{EXIT}, sencillamente se devuelve la proxima tarea en la cola, sin encolar nuevamente la tarea actual, y se pone el contador de ticks para ese cpu en $0$. En caso de no haber más tareas, se ejecuta \textbf{IDLE\_TASK}.
+Cuando un proceso llama a la función \texttt{unblock}, esta vuelve a encolar el proceso en la cola de tareas.
 
-Para mÃ¡s detalles, consultar la implementación en el archivo \textit{sched\_rr.cpp}.
+Para más detalles, consultar la implementación en el archivo \textit{sched\_rr.cpp}.
 
 \subsection{Ejercicio 4}
 En esta parte nos vamos a focalizar en la utilización de la polí­tica de scheduling implementada anteriormente para mostrar cómo se comporta la misma con diversos quantums y cantidad de cores. La intención es mostrar cuan eficiente o ineficiente puede ser una misma política tan solo con variar el quantum y mostrar que la elección del mismo es muy importante.
