--- a/latex/ej7.tex
+++ b/latex/ej7.tex
@@ -296,8 +296,7 @@ Las conclusiones que pudimos sacar fueron las siguientes:
 \begin{itemize}
  \item Dada una cantidad $i$ de cores, a medida que se aumenta el quantum, el tiempo promedio de Turnaround y Waiting Time disminuye. Esto en principio
  indicaría que es buena idea aumentar el quantum, pero sin embargo a medida que se aumenta este, aumenta también el desvío estándar, lo cual implica que los valores
- de Turnaround y Waiting Time se encuentran más dispersos. Esto significa que va a haber procesos que terminen relativamente rápido mientras que otros no, lo cual disminuye
- el \textit{fairness} del sistema.
+ de Turnaround y Waiting Time se encuentran más dispersos. Esto significa que va a haber procesos que terminen relativamente rápido mientras que otros no.
  \item Dado un mismo valor de quantum, aumentar la cantidad de cores siempre disminuye el tiempo promedio de Turnaround y Waiting Time, manteniendo o 
  reduciendo a su vez el desvío estándar. Por lo tanto, obviamente, un aumento en la cantidad de cores siempre es beneficioso.
  \item El Waiting Time representa una parte muy importante del Turnaround: aproximadamente un 81\% en el caso de 1 core, 65\% con 2 cores, y 53\% con 3 cores.
