Agrega guitarreo a los graficos de la parte uno

--- a/latex/parte1.tex
+++ b/latex/parte1.tex
@@ -31,3 +31,7 @@ El lote de tarea que utilizamos es el \textit{lote1.tsk}. A continuación se pued
 \begin{center}
  \textit{3 core}.
 \end{center}
+
+Los gráficos nos están indicando que a mayor cantidad de cores, mejor es el rendimiendo de la política FCFS, tanto si tomamos cómo métricas el \textit{waiting
+time} como el \textit{turnaround} de las tareas. En caso de tareas de mucha actividad I/O esta política no es eficiente, ya que se desperdicia CPU cuando
+esta espera que la tarea se desbloquee, en lugar de ejecutar otra.
