Fix de argumentos para SchedLottery

--- a/latex/maindoc.tex
+++ b/latex/maindoc.tex
@@ -189,7 +189,7 @@
 \materia{Sistemas Operativos}
 \grupo{}
 \integrante{Straminsky, Axel}{769/11}{axelstraminsky@gmail.com}
-\integrante{Chapresto, Matias}{}{matiaschapresto@gmail.com}
+\integrante{Chapresto, Matias}{201/12}{matiaschapresto@gmail.com}
 \integrante{Torres, Sebastian}{723/06}{sebatorres1987@hotmail.com}
 \begin{document}
 
